--- a/app/src/main/res/layout/gallery_movie_item.xml
+++ b/app/src/main/res/layout/gallery_movie_item.xml
@@ -7,5 +7,6 @@
     <com.android.volley.toolbox.NetworkImageView
         android:id="@+id/gallery_poster_item"
         android:layout_width="match_parent"
-        android:layout_height="match_parent" />
+        android:layout_height="wrap_content"
+        android:layout_margin="@dimen/gallery_poster_item_margin" />
 </FrameLayout>
