Add Switch button and handle exception
For old movies TMDB returns poster and date to be null

--- a/app/src/main/res/layout/gallery_movie_item.xml
+++ b/app/src/main/res/layout/gallery_movie_item.xml
@@ -4,6 +4,7 @@
     android:layout_height="match_parent"
     android:orientation="vertical">
 
+    <!--TODO add ripple effect-->
     <com.android.volley.toolbox.NetworkImageView
         android:id="@+id/gallery_poster_item"
         android:layout_width="match_parent"
