--- a/app/src/main/res/layout/gallery_movie_item.xml
+++ b/app/src/main/res/layout/gallery_movie_item.xml
@@ -1,13 +1,18 @@
 <?xml version="1.0" encoding="utf-8"?>
-<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
+<android.support.v7.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
+    android:id="@+id/card_view"
     android:layout_width="match_parent"
-    android:layout_height="match_parent"
-    android:orientation="vertical">
+    android:layout_height="wrap_content"
+    android:layout_margin="@dimen/gallery_poster_item_margin">
 
-    <!--TODO add ripple effect-->
-    <com.android.volley.toolbox.NetworkImageView
-        android:id="@+id/gallery_poster_item"
+    <RelativeLayout
         android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:layout_margin="@dimen/gallery_poster_item_margin" />
-</FrameLayout>
+        android:layout_height="match_parent">
+
+        <com.android.volley.toolbox.NetworkImageView
+            android:id="@+id/gallery_poster_item"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:layout_margin="@dimen/gallery_poster_item_margin" />
+    </RelativeLayout>
+</android.support.v7.widget.CardView>
