Change recycler column

--- a/app/src/main/res/values/my_app_config.xml
+++ b/app/src/main/res/values/my_app_config.xml
@@ -1,6 +1,7 @@
 <?xml version="1.0" encoding="utf-8"?>
 <resources>
-    <integer name="gallery_column">2</integer>
-    <string name="tmdb_poster_size_gallery">w780</string>
+    <!--TODO: find a way to fit the image in 2 columns itself-->
+    <integer name="gallery_column">3</integer>
+    <string name="tmdb_poster_size_gallery">w342</string>
     <string name="tmdb_poster_size_detail">w185</string>
 </resources>
