--- a/app/src/main/res/layout/activity_movie_detail.xml
+++ b/app/src/main/res/layout/activity_movie_detail.xml
@@ -9,12 +9,8 @@
     android:paddingTop="@dimen/activity_vertical_margin"
     tools:context=".activities.MovieDetailActivity">
 
-    <fragment
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:name="com.krishnaentertainment.nd801.popularmovies.fragments.MovieDetailFragment"
-        android:id="@+id/fragment2"
-        android:layout_centerVertical="true"
-        android:layout_centerHorizontal="true"
-        tools:layout="@layout/fragment_movie_detail" />
+    <FrameLayout
+        android:id="@+id/movie_detail_container"
+        android:layout_width="match_parent"
+        android:layout_height="match_parent" />
 </RelativeLayout>
